# vulkan_game

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
.github/workflows/: build-and-test.yml  build.yml
engine/: CMakeLists.txt
engine/core/: application.h  engine.c  engine.h  system.c  system.h  window.c  window.h
engine/core/containers/: darray.h
engine/core/parsers/: json.c
engine/core/renderer/: camera.c  camera.h  command_buffer.c  command_buffer.h  context.c  device.c  pipeline.c  pipeline.h  swapchain.c  swapchain.h  types.h
engine/runtime/: runtime.c
games/testbed/: CMakeLists.txt  app.c  text_system.c  text_system.h
lib/vm/: CMakeLists.txt
lib/vm/include/vm/: cam.h  common.h  mat4.h  types.h  util.h  vec2.h  vec3.h  vm.h
lib/vm/src/: vec3.c
models/: tire.glb
res/fonts/foxus/: Read Me.txt
res/shaders/: simple.frag  text.frag  text.vert
shaders/: simple_instanced.vert  terrain_vectors.frag  terrain_vectors.vert
src/: application.c  application.h  camera.c  camera.h  command_buffer.c  command_buffer.h  context.c  context.h  darray.c  darray.h  defines.h  device.c  device.h  font.c  font.h  gltf.c  gltf.h  json.c  json.h  main.c  pipeline.c  pipeline.h  swapchain.c  types.h
